tests/fixtures/invalid/for_loop_initializer_scope.c
int main() {
    for (int i = 0; i < 1; i = i + 1) {
    }
    return i;
}
